feat: 빨간테두리 주석 및 소파이미지 교체

--- a/frontend/project_react/src/App.css
+++ b/frontend/project_react/src/App.css
@@ -7,7 +7,7 @@
   position: relative;
   word-break: keep-all;
   /* font-family: 'Noto Sans KR', sans-serif; */
-  border: 1px solid red;
+  /* border: 1px solid red; */
   box-sizing: border-box;
 }
 
