--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     {% include features.html %}
-                    <div>
+                    <article class="page markdown-body">
                         <h2 id="git-hub-링크"><a href="https://github.com/kookmin-sw/capstone-2024-25">Git Hub 링크</a></h2>
                         <h2 id="프로젝트-소개">프로젝트 소개</h2>
                         <h4 id="개발-동기">개발동기</h4>
@@ -89,7 +89,7 @@
                         </ol>
                         <h2 id="소개-영상">소개 영상</h2>
                         <iframe width="1140" height="639" src="https://youtu.be/3ocOheOt5x8" title="캡스톤 25조_ 올봄 소개영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    </div>
+                    </article>
 
                     {% include footer.html %}
                     {% include appstoreimages.html %}
