fix: docs - update 팀원 소개

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -89,6 +89,66 @@
                         </ol>
                         <h2 id="소개-영상">소개 영상</h2>
                         <iframe width="1140" height="639" src="https://youtu.be/3ocOheOt5x8" title="캡스톤 25조_ 올봄 소개영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                        <h2 id="팀원-소개">팀원 소개</h2>
+                        <div>
+                            <div margin="0 auto">
+                                <table margin="0 auto">
+                                    <tbody><tr align="center">
+                                        <td style="min-width: 187px;">
+                                            <a href="https://github.com/Eun-sun-Lee">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a47d70cf-02ad-409f-a320-057046f56578" width="100">
+                                                <br>
+                                                <b>이은선 (Eun-sun-Lee)</b>
+                                            </a>
+                                            <br>
+                                            20203118
+                                        </td>
+                                        <td style="min-width: 187px;">
+                                            <a href=https://github.com/VarGun">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/53166aa7-a504-4d5c-889f-545c99249710" width="100">
+                                                <br>
+                                                <b>곽희건 (VarGun)</b>
+                                            </a>
+                                            <br>
+                                            20181574
+                                        </td>
+                                        <td style="min-width: 187px;">
+                                            <a href="https://github.com/hammsik">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/bb9a6d50-a53d-4456-ae55-7c577e697fb6" width="100">
+                                                <br>
+                                                <b>백현식 (hammsik)</b>
+                                            </a>
+                                            <br>
+                                            20191605
+                                        </td>
+                                        <td style="min-width: 187px;">
+                                            <a href="https://github.com/CLM-BONNY">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a8daeed0-a399-4c60-adda-c17d97d3b4ac" width="100">
+                                                <br>
+                                                <b>김민선 (CLM-BONNY)</b>
+                                            </a>
+                                            <br>
+                                            20203035
+                                        </td>
+                                    </tr>
+                                    <tr align="center">
+                                        <td>
+                                            Backend
+                                        </td>
+                                        <td>
+                                            Frontend
+                                        </td>
+                                        <td>
+                                            Frontend
+                                        </td>
+                                        <td>
+                                            AI
+                                        </td>
+                                    </tr>
+                                    </tbody></table>
+                                <br>
+                            </div>
+                        </div>
                     </article>
 
                     {% include footer.html %}
