fix: docs - update 팀원 소개 이미지

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -96,7 +96,7 @@
                                     <tbody><tr align="center">
                                         <td style="min-width: 187px;">
                                             <a href="https://github.com/Eun-sun-Lee">
-                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a47d70cf-02ad-409f-a320-057046f56578" width="100">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a47d70cf-02ad-409f-a320-057046f56578" width="100" height="120">
                                                 <br>
                                                 <b>이은선 (Eun-sun-Lee)</b>
                                             </a>
@@ -105,7 +105,7 @@
                                         </td>
                                         <td style="min-width: 187px;">
                                             <a href=https://github.com/VarGun">
-                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/53166aa7-a504-4d5c-889f-545c99249710" width="100">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/53166aa7-a504-4d5c-889f-545c99249710" width="100" height="120">
                                                 <br>
                                                 <b>곽희건 (VarGun)</b>
                                             </a>
@@ -114,7 +114,7 @@
                                         </td>
                                         <td style="min-width: 187px;">
                                             <a href="https://github.com/hammsik">
-                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/bb9a6d50-a53d-4456-ae55-7c577e697fb6" width="100">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/bb9a6d50-a53d-4456-ae55-7c577e697fb6" width="100" height="120">
                                                 <br>
                                                 <b>백현식 (hammsik)</b>
                                             </a>
@@ -123,7 +123,7 @@
                                         </td>
                                         <td style="min-width: 187px;">
                                             <a href="https://github.com/CLM-BONNY">
-                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a8daeed0-a399-4c60-adda-c17d97d3b4ac" width="100">
+                                                <img src="https://github.com/kookmin-sw/capstone-2024-25/assets/84428520/a8daeed0-a399-4c60-adda-c17d97d3b4ac" width="100" height="120">
                                                 <br>
                                                 <b>김민선 (CLM-BONNY)</b>
                                             </a>
