fix: docs - update 소개 영상

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -88,7 +88,7 @@
                             <li>채용 정보 제공을 통해 장년층이 사회의 일원으로서 소속감을 회복하고 경제적 자립을 돕습니다.</li>
                         </ol>
                         <h2 id="소개-영상">소개 영상</h2>
-                        <iframe width="1140" height="639" src="https://youtu.be/3ocOheOt5x8" title="캡스톤 25조_ 올봄 소개영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                        <iframe width="1140" height="639" src="https://www.youtube.com/watch?v=3ocOheOt5x8" title="캡스톤 25조_ 올봄 소개영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
                         <h2 id="팀원-소개">팀원 소개</h2>
                         <div>
                             <div margin="0 auto">
