--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -51,6 +51,8 @@
                             </p>
                         </div>
                     </div>
+                    <img width="700" src="https://github.com/kookmin-sw/capstone-2024-25/assets/66056874/fed2d5f3-3a3e-4213-a0e8-8fe5c7477068" />
+
                     {% include features.html %}
                     <article class="page markdown-body">
                         <h2 id="git-hub-링크"><a href="https://github.com/kookmin-sw/capstone-2024-25">Git Hub 링크</a></h2>
