fix: docs - update 포스터 - 5

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -50,8 +50,9 @@
                                 {{ site.app_description }}
                             </p>
                         </div>
+                    </div>
+                    <div>
                         <img width="700" src="https://github.com/kookmin-sw/capstone-2024-25/assets/66056874/fed2d5f3-3a3e-4213-a0e8-8fe5c7477068" />
-
                     </div>
 
                     {% include features.html %}
