fix: 기대효과 내용 추가

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -63,7 +63,7 @@
                             현대 기술은 매우 빠르게 진화하고 있습니다. 스마트폰, 소셜 미디어 등의 기술은 불과 몇 년 만에 일상 생활의 필수 요소로 자리잡았습니다. 그러나 이러한 변화를 따라잡기 위해 필요한 지식과 숙련도를 획득하는 데는 시간이 걸리며, 이는 장년층에게 특히 쉽지 않은 일입니다. 이 연령대는 건강 문제, 경제적 준비, 사회적 고립 등 다양한 문제에 직면하고 있어, 이들의 삶의 질을 향상시키기 위한 체계적이고 종합적인 라이프 케어 서비스의 필요성이 대두되고 있습니다.
                         </p>
                         <h4 id="해결하고자-하는-문제">해결하고자 하는 문제</h4>
-                        <h5 id="장년층이-겪고-있는-문제">장년층이 겪고 있는 문제</h5>
+                        <!-- <h5 id="장년층이-겪고-있는-문제">장년층이 겪고 있는 문제</h5> -->
                         <ol>
                             <li>
                                 디지털 기술의 빠른 변화에 적응하기 어려워 정보 접근성이 떨어지는 문제를 겪고 있습니다.
@@ -81,14 +81,27 @@
                         <h4 id="기대효과">기대효과</h4>
                         <ol>
                             <li>
-                                STT와 TTS 기능을 통해 복잡함 없이 시스템을 구현하여, 기술에 익숙하지 않은 장년층이 디지털 기기를 쉽게 사용할 수 있게 해줍니다.
+                                디지털 서비스에 대한 심리적 장벽 완화 
+                                STT, TTS 기능 등 복잡한 사용법을 요구하지 않는 기능들을 통해 시스템을 구현하였다. 
+                                이는 기술에 익숙하지 않은 장년층이 서비스를 쉽게 사용할 수 있게 하여, 디지털 기기에 대한 두려움을 줄이고 심리적 장벽을 완화시킬 수 있다.
                             </li>
                             <li>
-                                ToDo 관리 기능을 통해 다양한 활동을 추천하여, 사용자가 일상에서 새로운 자극을 받고 활력을 얻을 수 있도록 합니다.
+                                반복되는 무료한 일상 속의 소소한 즐거움 제공
+                                매일 똑같은 일상의 반복으로 인해 느낄 수 있는 무료함을 해소하고, 장년층에게 소소한 즐거움을 제공하고자 한다. 
+                                ToDo 관리 기능을 통해 사용자에게 다양한 활동을 추천하며, 이러한 활동들은 사용자가 일상에서 새로운 자극을 받고, 활력을 얻을 수 있는 기회를 제공함으로써, 무료한 일상에 활력을 불어넣을 것이다.
                             </li>
-                            <li>지도 기능을 활용해 건강 관리 및 일상 생활 정보를 쉽게 접할 수 있게 하여 생활의 편리함을 지원합니다.</li>
-                            <li>다양한 두뇌 게임을 통해 뇌 활동을 촉진시켜 장년 사용자의 기억력 및 사고 능력을 강화합니다.</li>
-                            <li>채용 정보 제공을 통해 장년층이 사회의 일원으로서 소속감을 회복하고 경제적 자립을 돕습니다.</li>
+                            <li>
+                                건강, 생활 및 복지 정보 접근성 향상
+                                지도 기능을 통해 건강 관리 및 일상 생활을 위한 정보를 쉽게 접할 수 있게 하여, 건강 유지 및 생활의 편리함을 지원한다.
+                            </li>
+                            <li>
+                                두뇌 향상과 뇌 활성화 촉진 
+                                문장 순서 맞추기, 스무고개, 십자말 풀이 게임을 통해 두뇌 활동을 촉진시키며, 평상시 사용하지 않는 두뇌 영역을 자극하고, 이를 통해 장년 사용자의 기억력 및 사고 능력을 강화할 수 있다.
+                            </li>
+                            <li>
+                                역할 상실 문제 해결 및 사회적 소속감 증대
+                                중장년 워크넷 사이트에서 크롤링한 데이터를 기반으로 장년층에게 채용 정보를 제공함으로써 사회의 일원으로서의 소속감을 회복시키며, 경제적 자립을 돕는다.
+                            </li>
                         </ol>
                         <h2 id="소개-영상">소개 영상</h2>
                         <iframe width="1140" height="639" src="https://www.youtube.com/embed/3ocOheOt5x8" title="캡스톤 25조_ 올봄 소개영상" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
