--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -25,3 +25,10 @@
     {% endfor %}
 
 </div>
+
+<style>
+/* 마지막 .feature의 span 요소 안의 아이콘들을 숨김 */
+.features .feature:last-of-type .fa-stack {
+    display: none;
+}
+</style>
