--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	{% if site.your_name %}
-	<p class="footerText">Made by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p>
+	<!-- <p class="footerText">Made by {% if site.your_link %}<a href="{{ site.your_link }}">{% endif %}{{ site.your_name }}{% if site.your_link %}</a>{% endif %}{% if site.your_city %} in {{ site.your_city }}{% endif %}</p> -->
 	{% endif %}
 	<div class="footerIcons">
 
@@ -59,12 +59,12 @@
 		{% endif %}
 
 	</div>
-	<div class="footerLinks">
+	<!-- <div class="footerLinks">
 		{% for page in site.pages %}
 			<a href="{{ page.url | relative_url }}" target="_self">{{ page.title }}</a>
 		{% endfor %}
 		{% if site.presskit_download_link %}
 			<a href="{{ site.presskit_download_link }}">Press Kit</a>
 		{% endif %}
-	</div>
+	</div> -->
 </footer>
